--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,11 +19,12 @@ html {
   background: $background;
 }
 
-.main {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 10rem;
-  flex-flow: column;
+.navbar {
+  position: fixed;
+  height: 10px;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: forestgreen;
+  z-index: 100;
 }
